# corroded

./: Cargo.toml  README.md  flake.nix
.github/: copilot-instructions.md
examples/: buffer_overflow.rs  pin.rs  relaxed_mutex.rs
src/: aliasing.rs  buffer.rs  global.rs  lib.rs  lifetime.rs  memory.rs  null.rs  pin.rs  race.rs  sync.rs  transmute.rs  uninit.rs
