[package]
name = "corroded-rs"
version = "0.3.0"
edition = "2021"
description = "A library that bypasses Rust's safety features."
keywords = ["unsafe", "memory-safety"]
authors = ["Kerim Buyukakyuz <kbuyukakyuz@gmail.com>"]
repository = "https://github.com/buyukakyuz/corroded"
license = "MIT"
readme = "README.md"
categories = ["development-tools"]

[workspace]
resolver = "3"
members = [".", "corroded-testimonials"]

[lib]
name = "corroded_rs"
path = "src/lib.rs"

[[example]]
name = "null_pointer"
path = "examples/null_pointer.rs"

[[example]]
name = "relaxed_mutex"
path = "examples/relaxed_mutex.rs"

[[example]]
name = "type_punning"
path = "examples/type_punning.rs"

[[example]]
name = "use_after_free"
path = "examples/use_after_free.rs"

[[example]]
name = "buffer_overflow"
path = "examples/buffer_overflow.rs"

[[example]]
name = "data_race"
path = "examples/data_race.rs"

[[example]]
name = "aliasing"
path = "examples/aliasing.rs"

[[example]]
name = "all_together"
path = "examples/all_together.rs"

[[example]]
name = "pin"
path = "examples/pin.rs"

[dependencies]

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
lde = "0.3"
libc = "0.2.178"
